crates/math-core/tests/snapshots/error_test__emph_in_math_mode.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\emph{x}"
---
Error: Not valid in math mode.
   ╭─[ <input>:1:1 ]
   │
 1 │ \emph{x}
   │ ──┬──  
   │   ╰──── this is not valid in math mode
───╯
